# pybind11-vcpkg

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  build.ps1  main.cpp  test.py  vcpkg.json
